Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="theme-color" content="#ff6600">
 
   <!-- 🔁 Автоматический переход -->
-  <meta http-equiv="refresh" content="https://www.instagram.com/reel/DPdbDrPjTVv/?igsh=NXUwOTk5ampkcmQ3">
+  <meta http-equiv="refresh" content="https://morozko12.ucoz.net/panel/?a=tgshop&l=setup">
   <script>
-    window.location.replace("https://www.instagram.com/reel/DPdbDrPjTVv/?igsh=NXUwOTk5ampkcmQ3");
+    window.location.replace("https://morozko12.ucoz.net/panel/?a=tgshop&l=setup");
   </script>
 
   <!-- 🎨 Оформление -->
@@ -56,7 +56,7 @@
   <div class="container">
     <h1>Переход на сайт</h1>
     <p>Нажмите кнопку ниже, если страница не открылась автоматически:</p>
-    <a class="btn" href="https://www.instagram.com/reel/DPdbDrPjTVv/?igsh=NXUwOTk5ampkcmQ3">Открыть сайт</a>
+    <a class="btn" href="https://morozko12.ucoz.net/panel/?a=tgshop&l=setup">Открыть сайт</a>
   </div>
 
   <!-- 📲 Регистрация Service Worker -->
@@ -68,4 +68,5 @@
     }
   </script>
 </body>
+
 </html>
