Modify index.html with new content and structure
Updated the HTML structure and content.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       Открыть магазин
     </a>
     <p style="font-size: 13px; opacity: 0.8; margin-top: 16px;">
-      Можно добавить на главный экран 📲
+      пошли все на хуй 📲
     </p>
   </div>
 
@@ -77,3 +77,4 @@
   </script>
 </body>
 </html>
+
