Modify welcome message and content in index.html
Updated welcome message and description text.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 <body>
   <div class="container">
-    <h1>Добро пожаловать в Lumo Food</h1>
-    <p>Ваш онлайн-магазин вкусной еды 🍱</p>
+    <h1>сьебались все бычстро в Lumo Food</h1>
+    <p>Ваш онлайн-магазин ахуевшей еды 🍱</p>
     <a class="btn" href="https://morozko12.ucoz.net/panel/?a=tgshop&l=setup" target="_blank">
       Открыть магазин
     </a>
@@ -77,4 +77,5 @@
   </script>
 </body>
 </html>
+
 
