--- a/install.html
+++ b/install.html
@@ -4,104 +4,133 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lumo Food — Установи приложение</title>
-  <meta name="theme-color" content="#00a859">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#4CAF50">
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #ffffff;
+      margin: 0;
+      font-family: "Inter", Arial, sans-serif;
+      background: #fffbea;
       color: #111;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      margin: 0;
+      min-height: 100vh;
+      flex-direction: column;
       text-align: center;
     }
 
+    .card {
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+      padding: 40px 28px;
+      max-width: 380px;
+      width: 90%;
+    }
+
+    img.logo {
+      width: 96px;
+      height: 96px;
+      border-radius: 24px;
+      margin-bottom: 20px;
+    }
+
     h1 {
-      color: #00a859;
-      margin-bottom: 8px;
+      font-size: 26px;
+      font-weight: 700;
+      margin-bottom: 12px;
+      color: #111;
     }
 
     p {
-      color: #555;
-      margin: 0 0 16px;
-    }
-
-    #qrcode {
-      margin: 20px auto;
-      padding: 12px;
-      background: #fff;
-      border: 2px solid #00a859;
-      border-radius: 12px;
+      font-size: 16px;
+      color: #444;
+      margin-bottom: 24px;
     }
 
     .btn {
-      background: #00a859;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      padding: 12px 20px;
+      display: inline-block;
+      background: #4CAF50;
+      color: white;
+      text-decoration: none;
       font-size: 18px;
-      cursor: pointer;
-      transition: background 0.2s;
+      font-weight: 600;
+      padding: 14px 24px;
+      border-radius: 12px;
+      transition: background 0.2s ease;
     }
     .btn:hover {
-      background: #007a44;
+      background: #3e9142;
     }
 
-    footer {
+    .city {
       font-size: 14px;
-      color: #888;
-      margin-top: 20px;
+      margin-top: 10px;
+      color: #555;
+    }
+
+    canvas {
+      margin-top: 24px;
+      border-radius: 12px;
+    }
+
+    .install-btn {
+      display: none;
+      margin-top: 16px;
+      background: #000;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: opacity 0.2s ease;
+    }
+
+    .install-btn:hover {
+      opacity: 0.9;
     }
   </style>
 </head>
 
 <body>
-  <h1>Lumo Food</h1>
-  <p>Доставка продуктов в один клик</p>
+  <div class="card">
+    <img src="icons/icon-512.png" alt="Lumo Food" class="logo">
+    <h1>Lumo Food</h1>
+    <p>Доставка продуктов в один клик</p>
+    <a class="btn" href="https://ekibosston.github.io/lumo-food/">Открыть приложение</a>
+    <p class="city">📍 Экибастуз</p>
+    <button id="installBtn" class="install-btn">📲 Установить Lumo Food</button>
+    <canvas id="qrcode"></canvas>
+  </div>
 
-  <canvas id="qrcode"></canvas>
-  <p>📱 Наведи камеру телефона на QR-код,<br>чтобы открыть приложение</p>
-
-  <button class="btn" id="installBtn">Установить на экран</button>
-
-  <footer>Экибастуз, 2025</footer>
-
-  <!-- Подключаем библиотеку для генерации QR -->
+  <!-- QR-код -->
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
-
   <script>
-    // 🔹 Генерация QR-кода
     QRCode.toCanvas(
       document.getElementById('qrcode'),
       'https://ekibosston.github.io/lumo-food/',
-      { width: 200, color: { dark: '#111', light: '#fff' } }
+      { width: 180, color: { dark: '#111', light: '#ffffff' } }
     );
+  </script>
 
-    // 🔹 Установка приложения (если поддерживается)
+  <!-- Install Prompt -->
+  <script>
     let deferredPrompt;
     const installBtn = document.getElementById('installBtn');
-    installBtn.style.display = 'none';
 
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
       deferredPrompt = e;
       installBtn.style.display = 'inline-block';
-    });
 
-    installBtn.addEventListener('click', async () => {
-      if (deferredPrompt) {
+      installBtn.addEventListener('click', () => {
+        installBtn.style.display = 'none';
         deferredPrompt.prompt();
-        const choiceResult = await deferredPrompt.userChoice;
-        if (choiceResult.outcome === 'accepted') {
-          console.log('✅ Установлено');
-        }
-        deferredPrompt = null;
-      }
+        deferredPrompt.userChoice.then(() => deferredPrompt = null);
+      });
     });
   </script>
 </body>
