Update logo image styles in install.html

--- a/install.html
+++ b/install.html
@@ -31,10 +31,10 @@
     }
 
     img.logo {
-      width: 96px;
-      height: 96px;
-      border-radius: 24px;
-      margin-bottom: 20px;
+       width: 40%;
+    height: auto;
+    border-radius: 20%;
+    margin-bottom: 20px;
     }
 
     h1 {
