Remove emoji from install button text

--- a/install.html
+++ b/install.html
@@ -102,7 +102,7 @@
     <p>Доставка продуктов в один клик</p>
     <a class="btn" href="https://ekibosston.github.io/lumo-food/">Открыть приложение</a>
     <p class="city">📍 Экибастуз</p>
-    <button id="installBtn" class="install-btn">📲 Установить Lumo Food</button>
+    <button id="installBtn" class="install-btn"> Установить Lumo Food</button>
     <canvas id="qrcode"></canvas>
   </div>
 
